tweaked qtile config

--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -24,7 +24,12 @@
 #+end_src
 
 * TODO Keybinds and other functions
+Add error next/prev stuff
 #+begin_src elisp
+
+;; evil-snipe
+;(evil-snipe-scope 'visible)
+
 ;; Here are some additional functions/macros that could help you configure Doom:
 ;;
 ;; - `load!' for loading external *.el files relative to this one
@@ -47,7 +52,9 @@
 (use-package lsp-dart
   :ensure t
   :hook (dart-mode . lsp))
+(use-package hover :ensure t)
 
+;; Config files
 (map! :leader
       (:prefix ("-" . "open file")
        :desc "Edit agenda file" "a" #'(lambda () (interactive) (find-file "~/Org/agenda.org"))
