--- a/.config/qtile/README.org
+++ b/.config/qtile/README.org
@@ -13,10 +13,16 @@ import subprocess
 from libqtile.config import Drag, Key, Screen, Group, Drag, Click, Rule
 from libqtile.command import lazy
 from libqtile import layout, bar, widget, hook
-from libqtile.widget import Spacer, Mpd2
+from libqtile.widget import Spacer
+from random import randint
 #import arcobattery
 #+end_src
-
+* INIT
+#+begin_src  python
+############################################################
+## => INIT
+############################################################
+#+end_src
 * COLORS
 #+begin_src python
 ############################################################
@@ -54,6 +60,7 @@ color14 =                         "#21BFC2"
 color7 =                          "#FDF0ED"
 color15 =                         "#f8f8f8"
 #+end_src
+
 * KEYBINDS
 Most of our keybindings are in sxhkd file - except these
 [[file:/home/patrick/.config/qtile/sxhkd/sxhkdrc][sxhkd file]]
@@ -67,12 +74,6 @@ mod                     = "mod4"
 mod1                    = "alt"
 mod2                    = "control"
 home                    = os.path.expanduser('~')
-
-browser                 = "google-chrome-stable"
-terminal                = "alacritty"
-filemanager             = "nautilus"
-editor                  = "emacs"
-email                   = "thunderbird"
 
 @lazy.function
 def window_to_prev_group(qtile):
@@ -258,7 +259,8 @@ layouts = [
     layout.Max(**layout_theme)
 ]
 #+end_src
-* COMMENT BAR
+
+* BAR
 #+begin_src python
 ############################################################
 ## => BAR
@@ -271,12 +273,15 @@ def init_widgets_defaults():
                 background=color0)
 
 widget_defaults = init_widgets_defaults()
-bgcolors = [color1, color3, color4]
-fgcolors = [color0, color0, color0]
 
 def init_widgets_list():
     prompt = "{0}@{1}: ".format(os.environ["USER"], socket.gethostname())
-    index = 0 # to make sure the bg color always alternates
+    bgcolors = [color1, color2, color3, color5, color4]
+    arr_len = len(bgcolors)
+    foreground = color0
+    index = randint(0, arr_len - 1) # to make sure the bg color always alternates and the colors randomize
+    divider_size = 37
+    padding = 10
     widgets_list = [
                widget.GroupBox(font="FiraCode Nerd Font",
                         fontsize = 16,
@@ -286,59 +291,59 @@ def init_widgets_list():
                         padding_x = 5,
                         borderwidth = 0,
                         disable_drag = True,
-                        active = color9,
-                        inactive = color5,
+                        active = color6,
+                        inactive = color8,
                         rounded = False,
                         highlight_method = "text",
                         this_current_screen_border = color7,
-                        foreground = bgcolors[index % 3],
+                        foreground = bgcolors[(index:=index+1) % arr_len],
                         background = color0
                         ),
                widget.Sep(
                         linewidth = 1,
-                        padding = 10,
-                        foreground = bgcolors[index % 3],
+                        padding = padding,
+                        foreground = bgcolors[index % arr_len],
                         background = color0
                         ),
                widget.CurrentLayout(
-                        foreground = bgcolors[index % 3],
+                        foreground = bgcolors[index % arr_len],
                         background = color0
                         ),
                widget.Sep(
                         linewidth = 1,
-                        padding = 10,
-                        foreground = bgcolors[index % 3],
+                        padding = padding,
+                        foreground = bgcolors[index % arr_len],
                         background = color0
                         ),
                widget.WindowName(
                         fontsize = 14,
-                        foreground = bgcolors[(index:=index+1) % 3],
+                        foreground = bgcolors[(index:=index+1) % arr_len],
                         background = color0,
                         ),
                # widget.Mpd2(
                #          background = color0,
                #          foreground = color6,
                #          ),
-               widget.TextBox(text = ' ', background = color0, foreground = bgcolors[(index + 1) % 3], margin_y = 20, padding = -1, fontsize = 37),
                # widget.Net(
                #          font="Noto Sans",
                #          fontsize=12,
                #          interface="enp0s31f6",
                #          foreground = "#FFFFFF",
-               #          background = bgcolors[index % 3],
+               #          background = bgcolors[index % arr_len],
                #          padding = 0,
                #          ),
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-               #          foreground = fgcolors[index % 3],
-               #          background = bgcolors[index % 3]
+               #          padding = padding,
+               #          foreground = foreground,
+               #          background = bgcolors[index % arr_len]
                #          ),
+               widget.TextBox(text = ' ', background = color0, foreground = bgcolors[(index:=index + 1) % arr_len], margin_y = 20, padding = -1, fontsize = divider_size),
                widget.TextBox(
                         font="FiraCode Nerd Font",
                         text=" ﯱ",
-                        foreground = fgcolors[(index:=index+1) % 3],
-                        background = bgcolors[index % 3],
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len],
                         padding = 0,
                         fontsize=18
                         ),
@@ -348,8 +353,8 @@ def init_widgets_list():
                         bandwidth="down",
                         interface="auto",
                         fill_color = color0,
-                        foreground = fgcolors[index % 3],
-                        background = bgcolors[index % 3],
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len],
                         graph_color = color0,
                         border_color = color0,
                         padding = 0,
@@ -359,15 +364,15 @@ def init_widgets_list():
                         ),
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-#                        foreground = fgcolors[index % 3],
-                        # background = bgcolors[index % 3]
+               #          padding = padding,
+#                        foreground = foreground,
+                        # background = bgcolors[index % arr_len]
                #          ),
                # # do not activate in Virtualbox - will break qtile
                # widget.ThermalSensor(
-#                        foreground = fgcolors[index % 3],
+#                        foreground = foreground,
                #          foreground_alert = color6,
-                        # background = bgcolors[index % 3]
+                        # background = bgcolors[index % arr_len]
                #          metric = True,
                #          padding = 3,
                #          threshold = 80
@@ -375,9 +380,9 @@ def init_widgets_list():
                # # battery option 1  ArcoLinux Horizontal icons do not forget to import arcobattery at the top
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-#                        foreground = fgcolors[index % 3],
-                        # background = bgcolors[index % 3]
+               #          padding = padding,
+#                        foreground = foreground,
+                        # background = bgcolors[index % arr_len]
                #          ),
                # arcobattery.BatteryIcon(
                #          padding=0,
@@ -385,28 +390,28 @@ def init_widgets_list():
                #          y_poss=2,
                #          theme_path=home + "/.config/qtile/icons/battery_icons_horiz",
                #          update_interval = 5,
-                        # background = bgcolors[index % 3]
+                        # background = bgcolors[index % arr_len]
                #          ),
                # # battery option 2  from Qtile
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-               #          foreground = fgcolors[index % 3],
-               #          background = bgcolors[index % 3]
+               #          padding = padding,
+               #          foreground = foreground,
+               #          background = bgcolors[index % arr_len]
                #          ),
-               widget.TextBox(text = ' ', background = bgcolors[index % 3], foreground = bgcolors[(index + 1) % 3], margin_y = 20, padding = -1, fontsize = 37),
+               widget.TextBox(text = ' ', background = bgcolors[index % arr_len], foreground = bgcolors[(index:=index + 1) % arr_len], margin_y = 20, padding = -1, fontsize = divider_size),
                # widget.Battery(
                #          font="Noto Sans",
                #          update_interval = 10,
                #          fontsize = 12,
-                        # foreground = fgcolors[(index:=index+1) % 3],
-                        # background = bgcolors[index % 3]
+                        # foreground = foreground,
+                        # background = bgcolors[index % arr_len]
 	             #          ),
                widget.TextBox(
                         font="FiraCode Nerd Font",
                         text="  ",
-                        foreground = fgcolors[(index:=index+1) % 3],
-                        background = bgcolors[index % 3],
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len],
                         padding = 0,
                         fontsize=16
                         ),
@@ -414,7 +419,7 @@ def init_widgets_list():
                         border_color = color0,
                         fill_color = color0,
                         graph_color = color0,
-                        background = bgcolors[index % 3],
+                        background = bgcolors[index % arr_len],
                         border_width = 0,
                         line_width = 1,
                         core = "all",
@@ -423,16 +428,16 @@ def init_widgets_list():
                         ),
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-               #          foreground = fgcolors[index % 3],
-               #          background = bgcolors[index % 3]
+               #          padding = padding,
+               #          foreground = foreground,
+               #          background = bgcolors[index % arr_len]
                #          ),
-               widget.TextBox(text = ' ', background = bgcolors[index % 3], foreground = bgcolors[(index + 1) % 3], margin_y = 20, padding = -1, fontsize = 37),
+               widget.TextBox(text = ' ', background = bgcolors[index % arr_len], foreground = bgcolors[(index:=index + 1) % arr_len], margin_y = 20, padding = -1, fontsize = divider_size),
                widget.TextBox(
                         font="FiraCode Nerd Font",
                         text="  ",
-                        foreground = fgcolors[(index:=index+1) % 3],
-                        background = bgcolors[index % 3],
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len],
                         padding = 0,
                         fontsize=16
                         ),
@@ -441,37 +446,37 @@ def init_widgets_list():
                         format = '{MemUsed}M/{MemTotal}M',
                         update_interval = 1,
                         fontsize = 12,
-                        foreground = fgcolors[index % 3],
-                        background = bgcolors[index % 3]
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len]
                        ),
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-               #          foreground = fgcolors[index % 3],
-               #          background = bgcolors[index % 3]
+               #          padding = padding,
+               #          foreground = foreground,
+               #          background = bgcolors[index % arr_len]
                #          ),
-               widget.TextBox(text = ' ', background = bgcolors[index % 3], foreground = bgcolors[(index + 1) % 3], margin_y = 20, padding = -1, fontsize = 37),
+               widget.TextBox(text = ' ', background = bgcolors[index % arr_len], foreground = bgcolors[(index:=index + 1) % arr_len], margin_y = 20, padding = -1, fontsize = divider_size),
                widget.TextBox(
                         font="FiraCode Nerd Font",
                         text="  ",
-                        foreground = fgcolors[(index:=index+1) % 3],
-                        background = bgcolors[index % 3],
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len],
                         padding = 0,
                         fontsize=16
                         ),
                widget.Clock(
-                        foreground = fgcolors[index % 3],
-                        background = bgcolors[index % 3],
+                        foreground = foreground,
+                        background = bgcolors[index % arr_len],
                         fontsize = 14,
                         format="%Y-%m-%d %H:%M"
                         ),
                # widget.Sep(
                #          linewidth = 1,
-               #          padding = 10,
-               #          foreground = fgcolors[index % 3],
-               #          background = bgcolors[index % 3]
+               #          padding = padding,
+               #          foreground = foreground,
+               #          background = bgcolors[index % arr_len]
                #          ),
-               widget.TextBox(text = ' ', background = bgcolors[index % 3], foreground = color0, margin_y = 20, padding = -1, fontsize = 37),
+               widget.TextBox(text = ' ', background = bgcolors[index % arr_len], foreground = color0, margin_y = 20, padding = -1, fontsize = divider_size),
                widget.Systray(
                         background = color0,
                         icon_size=20,
@@ -503,8 +508,6 @@ def init_screens():
 screens = init_screens()
 #+end_src
 
-#+RESULTS:
-
 * CONFIGS
 #+begin_src python
 ############################################################
@@ -521,8 +524,6 @@ mouse = [
 dgroups_key_binder = None
 dgroups_app_rules = []
 
-# ASSIGN APPLICATIONS TO A SPECIFIC GROUPNAME
-# BEGIN
 #+end_src
 
 * ASSIGN APPS TO GROUPS
@@ -530,6 +531,8 @@ dgroups_app_rules = []
 ############################################################
 ## => ASSIGN APPS TO GROUPS
 ############################################################
+# ASSIGN APPLICATIONS TO A SPECIFIC GROUPNAME
+# BEGIN
 # @hook.subscribe.client_new
 # def assign_app_group(client):
 #     d = {}
