--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -1,34 +1,59 @@
-#+TITLE: Patrick Wulfe's Doom Emacs Config
-#+PROPERTY: header-args :tangle config.el
+#+TITLE: Doom Emacs Config
+#+AUTHOR: Patick Wulfe
+#+LANGUAGE: en
+#+PROPERTY: header-args:emacs-lisp :tangle config.el
 
-
-* General Config
+* User info
 #+begin_src elisp
-
-;; User info
 (setq user-full-name "Patrick Wulfe"
       user-mail-address "wulfep@gmail.com")
+#+end_src
 
-;; UI
+* UI
+** Fonts
+#+begin_src elisp
 (setq doom-font (font-spec :family "Fira Code" :size 16 :weight 'medium)
       doom-variable-pitch-font (font-spec :family "Noto Sans" :size 13)
       doom-big-font (font-spec :family "Literation Sans")
       )
-(setq doom-theme 'my-doom-horizon)
-(setq display-line-numbers-type 'relative)
-(setq confirm-kill-emacs nil)
-
-;; Folder locations
-(setq org-directory "~/org/")
-
 #+end_src
 
-* TODO Keybinds and other functions
-Add error next/prev stuff
+** Theme
 #+begin_src elisp
+(setq doom-theme 'my-doom-horizon)
+#+end_src
 
-;; evil-snipe
-;(evil-snipe-scope 'visible)
+** Line Numbers
+#+begin_src elisp
+(setq display-line-numbers-type 'relative)
+#+end_src
+
+** Scroll margin
+#+begin_src elisp
+(setq scroll-margin 10)
+#+end_src
+
+** Disable exit prompt
+#+begin_src elisp
+(setq confirm-kill-emacs nil)
+#+end_src
+
+* General Config
+** Enable auto-save and backup files
+#+begin_src elisp
+(setq auto-save-default t
+      make-backup-files t)
+#+end_src
+
+** Folder locations
+#+begin_src elisp
+(setq org-directory "~/org/")
+#+end_src
+
+* TODO Keybinds
+- Add error next/prev stuff
+- Add jump to test file
+- Add binds for dotfiles
 
 ;; Here are some additional functions/macros that could help you configure Doom:
 ;;
@@ -46,24 +71,35 @@ Add error next/prev stuff
 ;;
 ;; You can also try 'gd' (or 'C-c c d') to jump to their definition and see how
 ;; they are implemented.
+** Projectile
+#+begin_src elisp
+(map! :leader
+      (:desc "Go to test/implimentation file" "f t" #'projectile-toggle-between-implimentation-and-test))
+#+end_src
 
-;; Flutter
+** Babel
+#+begin_src elisp
+(map! :leader
+      :desc "Org babel tangle" "m B" #'org-babel-tangle)
+#+end_src
+
+** Dotfiles
+#+begin_src elisp
+(map! :leader
+        (:prefix ("f ." . "open dotfile")
+         :desc "Edit doom config.org" "d" #'(lambda () (interactive) (find-file "~/.config/doom/config.org"))
+         :desc "Edit qtile README.org" "q" #'(lambda () (interactive) (find-file "~/.config/qtile/README.org"))
+         :desc "Edit alacritty alacritty.yml" "a" #'(lambda () (interactive) (find-file "~/.config/doom/config.org"))
+         :desc "Open fish folder" "f" #'(lambda () (interactive) (find-file "~/.config/fish"))
+         ))
+#+end_src
+
+* Lang Specific Configs
+** Flutter
+#+begin_src elisp
 (use-package lsp-mode :ensure t)
 (use-package lsp-dart
   :ensure t
   :hook (dart-mode . lsp))
 (use-package hover :ensure t)
-
-;; Config files
-(map! :leader
-      (:prefix ("-" . "open file")
-       :desc "Edit agenda file" "a" #'(lambda () (interactive) (find-file "~/Org/agenda.org"))
-       :desc "Edit doom config.org" "c" #'(lambda () (interactive) (find-file "~/.config/doom/config.org"))
-       :desc "Edit eshell aliases" "e a" #'(lambda () (interactive) (find-file "~/.config/doom/eshell/aliases"))
-       :desc "Edit eshell profile" "e p" #'(lambda () (interactive) (find-file "~/.config/doom/eshell/profile"))
-       :desc "Edit doom init.el" "i" #'(lambda () (interactive) (find-file "~/.config/doom/init.el"))
-       :desc "Edit doom packages.el" "p" #'(lambda () (interactive) (find-file "~/.config/doom/packages.el"))))
-
-(map! :leader
-      :desc "Org babel tangle" "m B" #'org-babel-tangle)
 #+end_src
